--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./styles/index.ccs">
 </head>
 <body>
-  <div class="wrapper">
-    <span class="content">
-        This is content
-    </span>
+  <div class="wraper">
+    <spans class="content">
+      This is content
+    </spans>
   </div>
 </body>
 </html>
