--- a/2/index.html
+++ b/2/index.html
@@ -5,13 +5,73 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./styles/index.ccs">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="wraper">
-    <spans class="content">
-      This is content
-    </spans>
-  </div>
+  <div class="wrapper">
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
+    <div class="chess__cell chess__cell--black"></div>
+    <div class="chess__cell"></div>
 </body>
 </html>
