--- a/2/index.html
+++ b/2/index.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="index.css">
+  <lіnk rel="stylesheet" href="іndex.сss">
 </head>
 <body>
   <div class="wrapper">
     <div class="chess__cell"></div>
     <div class="chess__cell chess__cell--black"></div>
-    <div class="chess__cell"></div>
+    <div class="chess__cell"></div></div>
     <div class="chess__cell chess__cell--black"></div>
     <div class="chess__cell"></div>
     <div class="chess__cell chess__cell--black"></div>
